--- a/src/UI/Button/Button.css
+++ b/src/UI/Button/Button.css
@@ -2,12 +2,13 @@
 /* HSL */
 /* RGB */
 .button {
+  font-size: 20px;
   background-color: #85c7f2;
   color: #161925;
   border: none;
   border-bottom: 5px solid #6ebcf0;
-  padding: 1rem;
-  width: 10rem;
+  padding: 1em;
+  width: 6em;
   margin-bottom: 50px;
   border-radius: 2px; }
 
