--- a/src/Layout/Modal/Modal.css
+++ b/src/Layout/Modal/Modal.css
@@ -17,7 +17,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2.5em;
+  justify-content: space-around;
+  margin: 2em;
   height: 70%; }
 
 .overlay {
