--- a/src/Layout/Modal/Modal.scss
+++ b/src/Layout/Modal/Modal.scss
@@ -18,7 +18,8 @@
   display:flex;
   flex-direction: column;
   align-items: center;
-  margin:2.5em;
+  justify-content: space-around;
+  margin:2em;
   height:70%;
 }
 
