--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #406e8e;
-  overflow-y: hidden; }
+  overflow-y: scroll; }
 
 .no-select {
   -webkit-touch-callout: none;
