--- a/src/Component/HighScore/HighScoreList.scss
+++ b/src/Component/HighScore/HighScoreList.scss
@@ -12,24 +12,38 @@ body {
   padding: 10px;
   box-sizing: border-box;
 
+
   li {
-    display: flex;
     list-style: none;
     background: rgba(255, 255, 255, .025);
     padding: 10px 20px;
+    border-radius: 5px;
     color: #fff;
     margin: 5px 0;
     transition: .50s;
   }
 
+  span {
+    display: inline-block;
+    text-align: center;
+    width: 50%;
+  }
+
+  span:nth-child(1) {
+    border-right: 1px solid black;
+  }
+
   li:nth-child(1) {
     background: rgba(255, 255, 255, .6);
+
   }
   li:nth-child(2) {
     background: rgba(255, 255, 255, .5);
+
   }
   li:nth-child(3) {
     background: rgba(255, 255, 255, .3);
+
   }
   li:nth-child(4) {
     background: rgba(255, 255, 255, .2);
@@ -43,23 +57,7 @@ body {
   li:nth-child(7) {
     background: rgba(255, 255, 255, .025);
   }
-  li span:nth-child(1) {
-    width: 30px;
-  }
-  li span:nth-child(2) {
-    width: 200px;
-  }
-  li span:nth-child(3) {
-    width: 100px;
-    text-align: right;
-  }
-  li span:nth-child(4) {
-    width: 70px;
-    text-align: right;
-  }
-  li:hover {
-    transform: scale(1.09);
-  }
+
 
 }
 
